// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenSelectButton component should Render correctly 1`] = `
<SelectorButton>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={false}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    primary={true}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    underline={false}
    upper={false}
  >
    Select a token
  </Text>
</SelectorButton>
`;

exports[`TokenSelectButton component should Render correctly 2`] = `
<SelectorButton>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      symbol="ETH"
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={false}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    primary={true}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    underline={false}
    upper={false}
  >
    ETH
  </Text>
</SelectorButton>
`;

exports[`TokenSelectButton component should Render correctly 3`] = `
<SelectorButton>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      symbol="cDAI"
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={false}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    primary={true}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    underline={false}
    upper={false}
  >
    cDAI
  </Text>
</SelectorButton>
`;

exports[`TokenSelectButton component should Render correctly 4`] = `
<SelectorButton>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      icon="https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ"
      symbol="DAI"
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={false}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    primary={true}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    underline={false}
    upper={false}
  >
    DAI
  </Text>
</SelectorButton>
`;

exports[`TokenSelectButton component should Render correctly 5`] = `
<SelectorButton
  onPress={[MockFunction]}
>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      icon="https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ"
      symbol="DAI"
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={false}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    primary={true}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    underline={false}
    upper={false}
  >
    DAI
  </Text>
</SelectorButton>
`;
